--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://prasannakoirala58.github.io/Disney-Clone",
+  "homepage": "https://prasannakoirala58.github.io/Disney-Clone/",
   "name": "disney_clone",
   "version": "0.1.0",
   "private": true,
